--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "eslint": "^8.21.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.26.0",
+    "file-loader": "^6.2.0",
     "html-loader": "^4.1.0",
     "html-webpack-plugin": "^5.5.0",
     "jest": "^28.1.3",
@@ -40,6 +41,7 @@
     "optimize-css-assets-webpack-plugin": "^6.0.1",
     "puppeteer": "17.1.1",
     "terser-webpack-plugin": "^5.3.3",
+    "url-loader": "^4.1.1",
     "webpack": "^5.74.0",
     "webpack-cli": "^4.10.0",
     "webpack-dev-server": "^4.10.0",
